# Rust-Programming-Master-Class-from-Beginner-to-Expert

./: Cargo.toml  Cargo.toml.bak  generate_bins.sh  replace_spaces.sh
2 - Basic Programming/: 1 - Program Outputs and comments.rs
2_basic_programming/: 2_variables_and_scalar_data_types.rs  3_more_on_variables_shadowing_and_constants.rs  4_compound_data_type_strings.rs  4_compuond_data_type_strings.rs  5_compound_data_types_tuples_arrays_vectors.rs  6_compound_data_types_vectors.rs  7_functions_and_inputs.rs
3_rust_ownership/: 1_ownership_rules_premitive_and_non_premitive_types.rs  2_heap_and_stack.rs  3_ownership_and_references_in_functions.rs  4_mutable_and_immutable_references.rs  5_dereferencing.rs
4_control_structures/: 1_conditional_if_and_its_varaints.rs  2_if_let_nested_if_and_the_match.rs  3_match_statement.rs  4_while_and_simple_loops.rs  5_for_loops_and_its_variants.rs  6_break_and_continue.rs
5_project_stack_implemenation_and_applications/: 1_implementation_stacks_using_rust.rs  2_string_reversal_using_stacks.rs  3_expression_evaluation_implement_rust_using_stack.rs
6_structures,_traits,_generics,_enums/: 1_structs_basics.rs
6_structures_traits_generics_enums/: 1_structs_basics.rs  2_traits_and_default_implementations.rs
7_iterators,_lifetimes,_closures/7_iterators,_lifetimes,_closures/: 1_lifetimes.rs  3_eliding_lifetimes.rs  6_function_types.rs  7_iterators.rs
7_iterators_lifetimes_closures/7_iterators,_lifetimes,_closures/: 4_closures.rs  5_closures.rs  8_iterators.rs
8_rust_modules/1_rust_modules/: Cargo.toml
8_rust_modules/4_rust_modules/: 6_publishing_a_crate_on_crates_io.rs  Cargo.toml  main.rs
8_rust_modules/cargo_tools_to_visualize_module_hierarchy/: Cargo.toml
8_rust_modules/rust_modules_1/: Cargo.toml
8_rust_modules/rust_modules_1/src/: file_1.rs  main.rs
8_rust_modules/rust_modules_2/: Cargo.toml  main.rs
8_rust_modules/rust_modules_4/: Cargo.toml
9_smart_pointers_in_rust/: 1_basics_of_smart_pointers.rs  2_box_pointers_and_when_they_are_useful.rs  3_refining_cons_list_and_custom_smart_pointer.rs  5_rc_smart_pointer.rs  7_implementing_singly_link_list_from_scratch.rs  8_implementing_singly_link_list_from_scratch.rs
