[package]
name = "rust_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "comments"
path = "2_basic_programming/1_program_outputs_and_comments.rs"

[[bin]]
name = "variables"
path = "2_basic_programming/2_variables_and_scalar_data_types.rs"

[[bin]]
name = "more_variables"
path = "2_basic_programming/3_more_on_variables_shadowing_and_constants.rs"

[[bin]]
name = "compound_data_type_strings"
path = "2_basic_programming/4_compound_data_type_strings.rs"

[[bin]]
name = "compound_data_types_tuples_arrays_vectors"
path = "2_basic_programming/5_compound_data_types_tuples_arrays_vectors.rs"

[[bin]]
name = "compound_data_types_vectors"
path = "2_basic_programming/6_compound_data_types_vectors.rs"

[[bin]]
name = "functions_and_inputs"
path = "2_basic_programming/7_functions_and_inputs.rs"

[[bin]]
name = "ownership_rules_premitive_and_non_premitive_types"
path = "3_rust_ownership/1_ownership_rules_premitive_and_non_premitive_types.rs"

[[bin]]
name = "heap_and_stack"
path = "3_rust_ownership/2_heap_and_stack.rs"

[[bin]]
name = "onwership_and_feferences_in_functions"
path = "3_rust_ownership/3_onwership_and_feferences_in_functions.rs"

[[bin]]
name = "mutable_and_immutable_references"
path = "3_rust_ownership/4_mutable_and_immutable_references.rs"