[package]
name = "rust_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
    "8_rust_modules/rust_modules_1",
    "8_rust_modules/rust_modules_2",
    "8_rust_modules/rust_modules_4",
    "8_rust_modules/cargo_tools_to_visualize_module_hierarchy",
]

[[bin]]
name = "comments"
path = "2_basic_programming/1_program_outputs_and_comments.rs"

[[bin]]
name = "variables"
path = "2_basic_programming/2_variables_and_scalar_data_types.rs"

[[bin]]
name = "more_variables"
path = "2_basic_programming/3_more_on_variables_shadowing_and_constants.rs"

[[bin]]
name = "compound_data_type_strings"
path = "2_basic_programming/4_compound_data_type_strings.rs"

[[bin]]
name = "compound_data_types_tuples_arrays_vectors"
path = "2_basic_programming/5_compound_data_types_tuples_arrays_vectors.rs"

[[bin]]
name = "compound_data_types_vectors"
path = "2_basic_programming/6_compound_data_types_vectors.rs"

[[bin]]
name = "functions_and_inputs"
path = "2_basic_programming/7_functions_and_inputs.rs"

[[bin]]
name = "ownership_rules_premitive_and_non_premitive_types"
path = "3_rust_ownership/1_ownership_rules_premitive_and_non_premitive_types.rs"

[[bin]]
name = "heap_and_stack"
path = "3_rust_ownership/2_heap_and_stack.rs"

[[bin]]
name = "onwership_and_feferences_in_functions"
path = "3_rust_ownership/3_ownership_and_references_in_functions.rs"

[[bin]]
name = "mutable_and_immutable_references"
path = "3_rust_ownership/4_mutable_and_immutable_references.rs"

[[bin]]
name = "derefencing"
path = "3_rust_ownership/5_dereferencing.rs"

[[bin]]
name = "1_conditional_if_and_its_varaints"
path = "4_control_structures/1_conditional_if_and_its_varaints.rs"

[[bin]]
name = "2_if_let_nested_if_and_the_match"
path = "4_control_structures/2_if_let_nested_if_and_the_match.rs"

[[bin]]
name = "3_match_statement"
path = "4_control_structures/3_match_statement.rs"

[[bin]]
name = "4_while_and_simple_loops"
path = "4_control_structures/4_while_and_simple_loops.rs"

[[bin]]
name = "5_for_loops_and_its_variants"
path = "4_control_structures/5_for_loops_and_its_variants.rs"

[[bin]]
name = "6_break_and_continue"
path = "4_control_structures/6_break_and_continue.rs"

[[bin]]
name = "2_string_reversal_using_stacks"
path = "5_project_stack_implemenation_and_applications/2_string_reversal_using_stacks.rs"

[[bin]]
name = "3_expression_evaluation_implement_rust_using_stack"
path = "5_project_stack_implemenation_and_applications/3_expression_evaluation_implement_rust_using_stack.rs"

[[bin]]
name = "8_hash_maps"
path = "6_structures_traits_generics_enums/8_hash_maps.rs"

[[bin]]
name = "6_option_enum"
path = "6_structures_traits_generics_enums/6_option_enum.rs"

[[bin]]
name = "3_functions_within_a_trait"
path = "6_structures_traits_generics_enums/3_functions_within_a_trait.rs"

[[bin]]
name = "1_structs_basics"
path = "6_structures_traits_generics_enums/1_structs_basics.rs"

[[bin]]
name = "2_traits_and_default_implementations"
path = "6_structures_traits_generics_enums/2_traits_and_default_implementations.rs"

[[bin]]
name = "4_enums"
path = "6_structures_traits_generics_enums/4_enums.rs"

[[bin]]
name = "7_result_enum"
path = "6_structures_traits_generics_enums/7_result_enum.rs"

[[bin]]
name = "5_generics"
path = "6_structures_traits_generics_enums/5_generics.rs"

[[bin]]
name = "3_eliding_lifetimes"
path = "7_iterators_lifetimes_closures/7_iterators_lifetimes_closures/3_eliding_lifetimes.rs"

[[bin]]
name = "4_closures"
path = "7_iterators_lifetimes_closures/7_iterators_lifetimes_closures/4_closures.rs"

[[bin]]
name = "8_iterators"
path = "7_iterators_lifetimes_closures/7_iterators_lifetimes_closures/8_iterators.rs"

[[bin]]
name = "6_function_types"
path = "7_iterators_lifetimes_closures/7_iterators_lifetimes_closures/6_function_types.rs"

[[bin]]
name = "5_closures"
path = "7_iterators_lifetimes_closures/7_iterators_lifetimes_closures/5_closures.rs"

[[bin]]
name = "1_lifetimes"
path = "7_iterators_lifetimes_closures/7_iterators_lifetimes_closures/1_lifetimes.rs"

[[bin]]
name = "7_iterators"
path = "7_iterators_lifetimes_closures/7_iterators_lifetimes_closures/7_iterators.rs"

[[bin]]
name = "4_re_exporting_using_pub_use"
path = "8_rust_modules/4_rust_modules/4_re_exporting_using_pub_use.rs"

[[bin]]
name = "6_publishing_a_crate_on_crates_io"
path = "8_rust_modules/4_rust_modules/6_publishing_a_crate_on_crates_io.rs"

[[bin]]
name = "5_using_external_crates"
path = "8_rust_modules/4_rust_modules/5_using_external_crates.rs"

[[bin]]
name = "2_rust_modules_file_1"
path = "8_rust_modules/2_rust_modules/file_1.rs"

[[bin]]
name = "2_rust_modules_file_2"
path = "8_rust_modules/2_rust_modules/file_2.rs"

[[bin]]
name = "file_3"
path = "8_rust_modules/2_rust_modules/file_3.rs"

[[bin]]
name = "1_rust_modules"
path = "8_rust_modules/2_rust_modules/1_rust_modules.rs"

[[bin]]
name = "main"
path = "8_rust_modules/1_rust_modules/main.rs"

[[bin]]
name = "method_2_lib"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_2/method_2/lib.rs"

[[bin]]
name = "method_2_customer_mod"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_2/customer/mod.rs"

[[bin]]
name = "method_2_order_mod"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_2/order/mod.rs"

[[bin]]
name = "method_2_category"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_2/product/category.rs"

[[bin]]
name = "method_2_product_mod"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_2/product/mod.rs"

[[bin]]
name = "method_1_category"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_1/product/category.rs"

[[bin]]
name = "product_method_1"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_1/method_1/product.rs"

[[bin]]
name = "customer_method_1"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_1/method_1/customer.rs"

[[bin]]
name = "lib_method_1"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_1/method_1/lib.rs"

[[bin]]
name = "rust_modules_order"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/method_1/method_1/order.rs"

[[bin]]
name = "rust_modules_commands"
path = "8_rust_modules/3_cargo_tools_to_visualize_module_hierarchy/3_cargo_tools_to_visualize_module_hierarchy/commands.rs"

[[bin]]
name = "2_lifetimes"
path = "7_iterators_lifetimes_closures/7_iterators,_lifetimes,_closures/2_lifetimes.rs"

[[bin]]
name = "1_implementation_stacks_using_rust"
path = "5_project_stack_implemenation_and_applications/1_implementation_stacks_using_rust.rs"

[[bin]]
name = "2_variables_and_scalar_data_types"
path = "2_basic_programming/2_variables_and_scalar_data_types.rs"

[[bin]]
name = "1_program_outputs_and_comments"
path = "2_basic_programming/1_program_outputs_and_comments.rs"

[[bin]]
name = "6_compound_data_types_vectors"
path = "2_basic_programming/6_compound_data_types_vectors.rs"

[[bin]]
name = "3_more_on_variables_shadowing_and_constants"
path = "2_basic_programming/3_more_on_variables_shadowing_and_constants.rs"

[[bin]]
name = "5_compound_data_types_tuples_arrays_vectors"
path = "2_basic_programming/5_compound_data_types_tuples_arrays_vectors.rs"

[[bin]]
name = "4_compound_data_type_strings"
path = "2_basic_programming/4_compound_data_type_strings.rs"

[[bin]]
name = "7_functions_and_inputs"
path = "2_basic_programming/7_functions_and_inputs.rs"

[[bin]]
name = "output-test-bin-2_heap_and_stack"
path = "target/debug/.fingerprint/rust_tutorial-826b2dec94a53d1c/output-test-bin-2_heap_and_stack.rs"

[[bin]]
name = "test-bin-2_heap_and_stack"
path = "target/debug/.fingerprint/rust_tutorial-9549cd8d95ee6aa4/test-bin-2_heap_and_stack.rs"

[[bin]]
name = "output-bin-2_heap_and_stack"
path = "target/debug/.fingerprint/rust_tutorial-bcb87541109c68de/output-bin-2_heap_and_stack.rs"

[[bin]]
name = "bin-2_heap_and_stack"
path = "target/debug/.fingerprint/rust_tutorial-826ad53cd6905131/bin-2_heap_and_stack.rs"

[[bin]]
name = "3_ownership_and_references_in_functions"
path = "3_rust_ownership/3_ownership_and_references_in_functions.rs"

[[bin]]
name = "5_dereferencing"
path = "3_rust_ownership/5_dereferencing.rs"

[[bin]]
name = "4_mutable_and_immutable_references"
path = "3_rust_ownership/4_mutable_and_immutable_references.rs"

[[bin]]
name = "1_ownership_rules_premitive_and_non_premitive_types"
path = "3_rust_ownership/1_ownership_rules_premitive_and_non_premitive_types.rs"

[[bin]]
name = "2_heap_and_stack"
path = "3_rust_ownership/2_heap_and_stack.rs"

